styles/style.css
/* ... */
/* nav items */
.navigation {
	font-family: 'Sen', sans-serif;
	font-size: 14px;
	font-weight: 400;
}

/*home page hero text */
.hero {
	line-height: 1.6;
}

#design {
	color: #6a6385;
	font-size: 24px;
}

.germ {
	font-size: 16px;
}

.fancy {
	font-family: 'Abril Fatface', cursive;
	font-size: 54px;
	font-weight: 400;
	color: #313131;
}

.fadeout {
	animation: fadeOut 5s;
	-webkit-animation: fadeOut 5s;
	-moz-animation: fadeOut 5s;
	-o-animation: fadeOut 5s;
	-ms-animation: fadeOut 5s;
}

@keyframes fadeOut {
	0% {opacity:1;}
	100% {opacity:0;}
}

@-moz-keyframes fadeOut {
  0% {opacity:1;}
  100% {opacity:0;}
}

@-webkit-keyframes fadeOut {
  0% {opacity:1;}
  100% {opacity:0;}
}

@-o-keyframes fadeOut {
  0% {opacity:1;}
  100% {opacity:0;}
}

@-ms-keyframes fadeOut {
  0% {opacity:1;}
  100% {opacity:0;}
}

.fadein {
	animation: fadeIn 7s;
	-webkit-animation: fadeIn 7s;
  -moz-animation: fadeIn 7s;
  -o-animation: fadeIn 7s;
  -ms-animation: fadeIn 7s;
}

@keyframes fadeIn {
	0% {opacity:.07;}
	30% {opacity:1;}
	60% {opacity:1;}
	100% {opacity:0;}
}

@-moz-keyframes fadeIn {
	0% {opacity:.07;}
	30% {opacity:1;}
	60% {opacity:1;}
	100% {opacity:0;}
}

@-webkit-keyframes fadeIn {
	0% {opacity:.07;}
	30% {opacity:1;}
	60% {opacity:1;}
	100% {opacity:0;}
}

@-o-keyframes fadeIn {
	0% {opacity:.07;}
	30% {opacity:1;}
	60% {opacity:1;}
	100% {opacity:0;}
}

@-ms-keyframes fadeIn {
	0% {opacity:.07;}
	30% {opacity:1;}
	60% {opacity:1;}
	100% {opacity:0}
}

.hero_text {
	font-size: 16px;
	font-weight: 400;
}

.badge {
	border: 1px solid #313131;
	border-radius: 4px;
	color: #000000;
	font-size: 16px;
	font-weight: 600;
	padding: 3px 5px;
	font-family: 'proxima nova', sans-serif;
}

/* Case Study Names */
.case_title {
	font-size: 32px;
	color: #313131;
}

/* "what is it?" */
.body_heading {
	font-size: 16px;
	font-weight: 700;
}

.details,
.details .body_heading {
	font-size: 14px;
}

.case-description {
	font-weight: 400;
}

.summary {
	line-height: 1.4;
}

.caption {
	font-family: 'Sen', sans-serif;
	font-size: 12px;
	font-weight: 600;
}

.centered {
	margin: 0px auto;
	text-align: center;
}

strong {
	font-weight: 700;
}

.box_label {
	font-weight: bold;
	font-size: 18px;
	line-height: 20px;
	background-color: white;
}

.box_text {
	line-height: 20px;
}

.app_description strong {
	font-family: 'Sen', sans-serif;
}

.app_description {
	line-height: 22px;
}

.contents li{
	font-size: 22px;
	font-weight: bold;
}

.small {
	font-size: 18px;
}





/* NAVIGATION ***************************** */

.navigation {
	width: 100vw;
	height: auto;
	position: sticky;
	top: 0;
	z-index: 9999;
}

.list {
	width: 100vw;
	margin-top: -5px;
	z-index: 1;
}

.nav_list {
	display: flex;
	flex-direction: row-reverse;
	flex-basis: auto;
	justify-content: space-around;
	align-items: center;
	padding: 5px 4% 0px 4%;
	background: linear-gradient(90.01deg, #14EBE3 6.71%, #5BDCFF 44.37%, #f9b6f8 89.76%);
}

.navigation .mobile_icon {
	margin-right: 6px;
}

.nav_item {
	display: flex;
	flex-direction: row;
	justify-content: center;
	align-items: center;
	width: auto;
}

.separator {
	position: static;
	width: 2px;
	height: 40px;
	background: #007DD1;
}

.nav {
	display: flex;
	flex-direction: column;
	align-items: flex-start;
	padding: 9px 22px;
	position: sticky;
	top: 0;
	z-index: 100;
	width: 100%;
	/* height: 80px; */
	background: linear-gradient(90.01deg, #14EBE3 6.71%, #5BDCFF 44.37%, #f9b6f8 89.76%);
	box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.35);
}

.title_caption {
	margin: 8px 0px;
}

/* NAVIGATION LINK STYLES ***************************** */


.navigation a:link,
.navigation a:visited {
	color: #313131;
}

.sat .navigation a:link,
.sat .navigation a:visited {
	color: #313131;
}

.sat a:link,
.sat a:visited {
	color: #4D1195;
}

/* Satellite pages Navigation Modifications */
/************/
			.sat .nav {
				height: 46px;
				position: sticky;
			}

			.sat .job_title {
				display: none;
			}

/* header, SELECTED link */
.navigation a:active {
	color: #4D1195;
}

/* footer, UNVISITED link */
.footer a:link,
.footer a:visited {
	color: #FFF;
}

/* --- CONTACT FORM ---- not using for now! */
/* formspree formatting */
/* form input,
form select,
form textarea,©
form fieldset,
form optgroup,
form label,
.StripeElement {
	font-family: 'Sen', sans-serif;
  font-size: 100%;
  color: inherit;
  border: none;
  border-radius: 0;
  display: block;
  width: 100%;
  padding: 0;
  margin: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
}
form label,
form legend {
  font-size: 14px;
  margin-bottom: 15px;

}
/* border, padding, margin, width */
/*
form input,
form select,
form textarea,
.StripeElement {
  box-sizing: border-box;
  border: 1px solid rgba(0, 0, 0, 0.2);
  background-color: rgba(255, 255, 255, 0.9);
  padding: 0.75em 1rem;
  margin-bottom: 1.5rem;
}
form input:focus,
form select:focus,
form textarea:focus,
.StripeElement:focus {
  background-color: white;
  outline-style: solid;
  outline-width: thin;
  outline-color: gray;
  outline-offset: -1px;
}
form [type="text"],
form [type="email"],
.StripeElement {
  width: 100%;
}
form [type="button"],
form [type="submit"],
form [type="reset"] {
  width: auto;
  cursor: pointer;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
}
form [type="button"]:focus,
form [type="submit"]:focus,
form [type="reset"]:focus {
  outline: none;
}

form [type="submit"]:hover,
form [type="button"]:hover {
	background-color: #4D1195;
	color: white;
}

form select {
  text-transform: none;
} */


/* --- FOOTER ---- */
/* footer formatting */
.footer {
	background: linear-gradient(231deg, #5BDCFF, #f9b6f8, #14EBE3);
	background-size: 250% 250%;
	-webkit-animation: Maddie 10s ease infinite;
	-moz-animation: Maddie 10s ease infinite;
	animation: Maddie 10s ease infinite;
	color: #313131;
  line-height: 1.4;
  padding-top: 30px;
}
/* ... */

